2002-11-04  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (byte_get_little_endian): Comment typo fix.
	(print_symbol): Constify "symbol" arg.  Don't pass "symbol" to printf
	as the format string.
	(dump_relocations): Correct section sym names.
	(process_section_headers): Clear symtab_shndx_hdr.
	(read_and_display_attr_value): Don't pass indirect string to printf
	as the format string.
	(display_debug_frames): Indicate when zero terminator found.  Decode
	DW_EH_PE_pcrel addresses.

2002-10-23  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* configure.in: Define SKIP_ZEROES as 32 for tic4x target in
	order to ensure proper disassembly of the valid 0-value opcode.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.
	* config.in: Regenerate.
	* configure.in: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/binutils.pot: Regenerate.

2002-10-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* MAINTAINERS: Add self as SH maintainer.

2002-10-23  Ben Elliston  <bje@redhat.com>

	* doc/binutils.texi (objdump): Document -z and move the entry for
	--disassemble-zeroes to the end of the options section (for `z').

2002-10-21  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Discontinue Hans-Peter Nilsson as SH maintainer.

2002-10-21  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* objdump.c (dump_data): Correct addr_offset for opb != 1.

2002-10-15  Alan Modra  <amodra@bigpond.net.au>

	* bucomm.c (list_supported_targets): Use bfd_target_list.

	* objcopy.c (copy_file): Report ambiguous bfd_object matches, and
	other object errors in preference to bfd_core errors.

2002-10-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* objdump.c: #include "bfdver.h".
	* version.c: Likewise.
	* Makefile.in: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.
	* po/POTFILES.in: Regenerate.

2002-10-09  Daniel Jacobowitz  <drow@mvista.com>

	* readelf.c (display_debug_info): Ignore empty .rela.debug_info